templates/style/css/o-blog.css
/* ... */
@media (min-width: 768px) and (max-width: 979px) {
.row {
    margin-left: -20px;
}
.row:before, .row:after {
    content: "";
    display: table;
    line-height: 0;
}
.row:after {
    clear: both;
}
.row:before, .row:after {
    content: "";
    display: table;
    line-height: 0;
}
.row:after {
    clear: both;
}
[class*="span"] {
    float: left;
    margin-left: 20px;
}
.container {
    width: 724px;
}
.span12 {
    width: 724px;
}
.span11 {
    width: 662px;
}
.span10 {
    width: 600px;
}
.span9 {
    width: 538px;
}
.span8 {
    width: 476px;
}
.span7 {
    width: 414px;
}
.span6 {
    width: 352px;
}
.span5 {
    width: 290px;
}
.span4 {
    width: 228px;
}
.span3 {
    width: 166px;
}
.span2 {
    width: 104px;
}
.span1 {
    width: 42px;
}
.offset12 {
    margin-left: 764px;
}
.offset11 {
    margin-left: 702px;
}
.offset10 {
    margin-left: 640px;
}
.offset9 {
    margin-left: 578px;
}
.offset8 {
    margin-left: 516px;
}
.offset7 {
    margin-left: 454px;
}
.offset6 {
    margin-left: 392px;
}
.offset5 {
    margin-left: 330px;
}
.offset4 {
    margin-left: 268px;
}
.offset3 {
    margin-left: 206px;
}
.offset2 {
    margin-left: 144px;
}
.offset1 {
    margin-left: 82px;
}
.row {
    margin-left: -20px;
}
.row:before, .row:after {
    content: "";
    display: table;
    line-height: 0;
}
.row:after {
    clear: both;
}
.row:before, .row:after {
    content: "";
    display: table;
    line-height: 0;
}
.row:after {
    clear: both;
}
[class*="span"] {
    float: left;
    margin-left: 20px;
}
.container {
    width: 724px;
}
.span12 {
    width: 724px;
}
.span11 {
    width: 662px;
}
.span10 {
    width: 600px;
}
.span9 {
    width: 538px;
}
.span8 {
    width: 476px;
}
.span7 {
    width: 414px;
}
.span6 {
    width: 352px;
}
.span5 {
    width: 290px;
}
.span4 {
    width: 228px;
}
.span3 {
    width: 166px;
}
.span2 {
    width: 104px;
}
.span1 {
    width: 42px;
}
.offset12 {
    margin-left: 764px;
}
.offset11 {
    margin-left: 702px;
}
.offset10 {
    margin-left: 640px;
}
.offset9 {
    margin-left: 578px;
}
.offset8 {
    margin-left: 516px;
}
.offset7 {
    margin-left: 454px;
}
.offset6 {
    margin-left: 392px;
}
.offset5 {
    margin-left: 330px;
}
.offset4 {
    margin-left: 268px;
}
.offset3 {
    margin-left: 206px;
}
.offset2 {
    margin-left: 144px;
}
.offset1 {
    margin-left: 82px;
}
}
@media (max-width: 767px) {
body {
    padding-left: 20px;
    padding-right: 20px;
}
.dl-horizontal dt {
    clear: none;
    float: none;
    text-align: left;
    width: auto;
}
.dl-horizontal dd {
    margin-left: 0;
}
.container {
    width: auto;
}
.row {
    margin-left: 0;
}
[class*="span"] {
    display: block;
    float: none;
    margin-left: 0;
    width: auto;
}
.span12 {
    -moz-box-sizing: border-box;
    width: 100%;
}
}
@media (max-width: 480px) {
.page-header h1 small {
    display: block;
    line-height: 24.9231px;
}
.form-horizontal .form-actions {
    padding-left: 10px;
    padding-right: 10px;
}
}
@media (max-width: 979px) {
body {
    padding-top: 0;
}
}
h1, h2, h3, h4, h5, h6 {
}
nav a:hover {
}
.breadcrumb {
    font-size: 13px;
    line-height: 13.68px;
}
.breadcrumb {
    padding: 3px 14px;
}
.breadcrumb li {
    line-height: 24.9231px;
}
li {
    line-height: 37.3846px;
}
#disqus_thread {
    font-size: 13px;
    line-height: 18px;
}
html {
    background: none repeat scroll 0 0 #000000;
    height: 100%;
}
.icon-white {
    opacity: 0.5;
}
.supernav {
    background-color: #F2F2F2;
    background-repeat: repeat-x;
    border: 1px solid #E5E5E5;
    border-radius: 4px 4px 4px 4px;
    top: 0;
    height: 31px;
    width: 100%;
}
.subnav {
    background-color: #F2F2F2;
    background-repeat: repeat-x;
    border: 1px solid #E5E5E5;
    border-radius: 4px 4px 4px 4px;
    top: 31px;
    height: 31px;
    width: 100%;
}

.supernav_title {
    font-size: 20px;
    font-weight: bolder;
}

.supernav_list {
    vertical-align: middle;
    top: 0;
}

.supernav_list {
    list-style: none outside none;
}
.supernav_list li {
    display: inline-block;
}
.supernav_list li + li:before {
    content: " / ";
    padding: 0 10px;
}

#page {
    padding-top: 120px;
}
#page .article-header .date {
    border: 1px solid #999999;
    display: inline-block;
    text-align: center;
    width: 3em;
}
#page .article-header .date a {
    color: rgba(153, 51, 51, 0.5);
    display: block;
}
#page .article-header .date .date-d {
    font-size: 1.5em;
}
#page .article-header .date .date-m {
    font-size: 1em;
    font-weight: bolder;
    text-transform: uppercase;
}
#page .article-header .date .date-y {
    background: none repeat scroll 0 0 #999999;
    font-size: 1em;
    font-weight: bolder;
}
#page .article-header .pager {
    margin-bottom: 0;
    margin-top: 24.9231px;
}
#page .article-content .outline-1 {
    margin-left: 1em;
}
#page .article-content .outline-2 {
    margin-left: 2em;
}
#page .article-content .outline-3 {
    margin-left: 3em;
}
#page .article-content .outline-4 {
    margin-left: 4em;
}
#page .article-content .outline-5 {
    margin-left: 5em;
}
#page .article-content .outline-6 {
    margin-left: 6em;
}
#page .article-content img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
#page .article-content .show-grid [class*="span"] {
    background-color: #EEEEEE;
    border-radius: 3px 3px 3px 3px;
}
#page .article-content .show-grid [class*="span"] .show-grid [class*="span"] {
    background-color: #D5D5D5;
}
#page .article-content .show-grid [class*="span"] .show-grid [class*="span"] .show-grid [class*="span"] {
    background-color: #BBBBBB;
}
#page .article-content .o-blog-source {
    display: inline-block;
}
/* ... */

